--- a/styles/style.css
+++ b/styles/style.css
@@ -57,8 +57,8 @@
 		list-style-type: none; 
 	}
 
-
-@media screen and (min-width: 450px) {
+/*
+@media screen and (max-width: 450px) {
 	body{
 		flex-direction: column;
 		align-items: center;
@@ -70,4 +70,4 @@
 	ul{
 		height: 55vh;
 	}
-}
+}*/
