--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 @font-face{
-	font-family: 'Niagara Solid';
+	font-family: 'Niagara';
 	scr: url(fonts/NIASOL.ttf) format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 
 	body{	
-		font-family: "Niagara Solid";
+		font-family: "Niagara";
 		display:flex;
 		width: 76%;
 		margin: 0 auto;
