--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face{
 	font-family: "Niagara";
-	scr: url(fonts/NIASOL.ttf) format("truetype");
+	scr: url(../fonts/NIASOL.ttf) format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
