--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 		font-size: 10vh;
 	}
 	html{
-		background: url(../images/background.png);
+		background: url(../images/background2.png);
 		background-repeat: no-repeat;
 		background-position: right bottom;
 		background-size: 80vh;
