--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 @font-face{
-	font-family: 'Niagara';	
+	font-family: Niagara;	
 	scr: 	local('Niagara Solid'),
 			url('NIASOL.ttf') format('truetype');
 }
 
 	body{	
-		font-family: 'Niagara';
+		font-family: Niagara;
 		display:flex;
 		width: 76%;
 		margin: 0 auto;
