--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 	body{	
-		font-family: "Niagara", serif;
+		font-family: "Niagara", "Niagara Solid", serif;
 		display:flex;
 		width: 76%;
 		margin: 0 auto;
