--- a/styles/style.css
+++ b/styles/style.css
@@ -1,60 +1,66 @@
-@font-face{
-	font-family: Niagara;	
-	scr: 	local('Niagara Solid'),
-			url('NIASOL.ttf') format('truetype');
+@font-face {
+    font-family: 'Niagara';
+    src: url('../fonts/NiagaraSolid-Reg.eot');
+    src: url('../fonts/NiagaraSolid-Reg.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/NiagaraSolid-Reg.woff2') format('woff2'),
+        url('../fonts/NiagaraSolid-Reg.woff') format('woff'),
+        url('../fonts/NiagaraSolid-Reg.svg#NiagaraSolid-Reg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
-	body{	
-		font-family: "Niagara", "Niagara Solid", serif;
-		display:flex;
-		width: 76%;
-		margin: 0 auto;
-		font-size: 10vh;
-	}
-	html{
-		background: url(../images/background2.png);
-		background-repeat: no-repeat;
-		background-position: right bottom;
-		background-size: 80vh;
-	}
+body{	
+	font-family: "Niagara", serif;
+	display:flex;
+	width: 76%;
+	margin: 0 auto;
+	font-size: 10vh;
+}
+html{
+	background: url(../images/background2.png);
+	background-repeat: no-repeat;
+	background-position: right bottom;
+	background-size: 80vh;
+}
 
-	.parts{
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex-basis: 50%;
-		height: 100vh;
-	}
+.parts{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-basis: 50%;
+	height: 100vh;
+}
 
-	h1{	
-		font-size: 5em;
-		margin-block-start: 0px;
-	    margin-block-end: 0;
-	}
+h1{	
+	font-size: 5em;
+	margin-block-start: 0px;
+    margin-block-end: 0;
+}
 
-	a{
-		text-decoration: none;
-		color: black;
-		background-image: linear-gradient(currentColor, currentColor);
-	    background-position: 0% 100%;
-	    background-repeat: no-repeat;
-	    background-size: 0% .2vh;
-	    transition: background-size .3s;
-	    
-	}
+a{
+	text-decoration: none;
+	color: black;
+	background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% .2vh;
+    transition: background-size .3s;
+    
+}
 
-	a:hover {	
-	    background-size: 100% .5vh;
-	}
+a:hover {	
+    background-size: 100% .5vh;
+}
 
-	ul{
-		display: flex;
-		flex-flow: column;
-		justify-content: space-between;
-		align-items: flex-end;
-		height: 60vh;
-		list-style-type: none; 
-	}
+ul{
+	display: flex;
+	flex-flow: column;
+	justify-content: space-between;
+	align-items: flex-end;
+	height: 60vh;
+	list-style-type: none; 
+}
 
 /*
 @media screen and (max-width: 450px) {
