--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,10 @@ ul{
 	height: 60vh;
 	list-style-type: none; 
 }
-
+@keyframes show{
+			0% {opacity:0;}
+			100% {opacity:1;}
+		}
 /*
 @media screen and (max-width: 450px) {
 	body{
